New version from Giorgio Borelli

--- a/lang/it/help/choice/options.html
+++ b/lang/it/help/choice/options.html
@@ -1,1 +1,5 @@
-<P ALIGN=CENTER><B>Choice options</B></P><P>Here is where you specify the options that participants    have to choose from.<P>You can fill in any number of these: it's OK to leave some blank    if you don't need the full 6 options.
+<P ALIGN=CENTER><B>Opzioni</B></P>  
+  
+<P>Qui si possono specificare le risposte tra cui gli studenti possono scegliere.  
+<P>Se ne pu&ograve; compilare il numero desiderato sino ad un massimo di 6 risposte.
+Le risposte che rimangono in bianco saranno ignorarte dal sistema e non appariranno nel questionario.
