--- a/lang/it/help/coursecategory.html
+++ b/lang/it/help/coursecategory.html
@@ -1,11 +1,10 @@
-<P ALIGN=CENTER><B>Course Categories</B></P>
+<P ALIGN=CENTER><B>Categorie dei corsi</B></P>
 
-<P>Your Moodle administrator may have set up several 
-   course categories.
+<p>L'amministratore della piattaforma Moodle pu&ograve; aver predisposto pi&ugrave;
+categorie di corsi</p>
 
-<P>For example, "Science", "Humanities", "Public Health" etc
+<p>Per esempio "Scienze", "Lettere", "Medicina" ecc.</p>
 
-<P>Choose the one most applicable for your course.  This 
-   choice will affect where your course is displayed on the 
-   course listing and may make it easier for students to 
-   find your course.
+<p>Scegli quella che meglio si applica al tuo corso. Questa scelta vincoler&agrave;
+la posizione del tuo corso nella lista dei corsi disponibili. Questo permette una
+maggiore facilit&agrave; per gli studenti nella sceglta dei corsi</p>
