--- a/lang/it/help/coursenumsections.html
+++ b/lang/it/help/coursenumsections.html
@@ -1,14 +1,9 @@
-<P ALIGN=CENTER><B>Course Number of Weeks/Topics</B></P>
+<P ALIGN=CENTER><B>Numero di settimane/argomenti del corso</B></P>
 
-<P>This setting is only used by the 'weekly' and 'topics'
-   course formats.
+<p>Questi parametri sono usati solo per i corsi in formato 'weekly' e 'topics'.</p>
 
-<P>In the 'weekly' format, it specifies the number of weeks 
-   that the course will run for, starting from the 
-   course starting date.
+<p>Nel formato 'weekly' questo paramtero specifica il numero di settimane del corso a partire dalla data di inizio.</p>
 
-<P>In the 'topics' format, it specifies the number of topics
-   in the course.
+<p>Nel formato 'topics' questo parametro specifica il numero di argomenti del corso.</p>
 
-<P>Both of these translate to the number of "boxes" down the 
-   middle of the course page.
+<p>Questo parametro determiner&grave; il numero di spazi nella parte centrale della pagina principale del corso.</p>
