--- a/lang/it/help/courserecent.html
+++ b/lang/it/help/courserecent.html
@@ -1,16 +1,15 @@
-<P ALIGN=CENTER><B>Recent Activity</B></P>
+<P ALIGN=CENTER><B>Attivit&agrave; recenti</B></P>
 
-<P>Moodle can display "recent activity" on the course home page.
+<P>Questa piattaforma pu&ograve; mostrare le ultime attivit&agrave; svolte
+nella pagina principale di ogni corso.</P>
 
-<P>This shows the everything that has happened in the course since
-the last time the viewer logged in to the course, including 
-new posts, new users, submitted journals etc.
+<P>Queste novit&agrave; mostrano a tutti i cambiamenti effettuati
+all'interno dei vari corsi dall'ultimo accesso dell'utente, tra cui messaggi, nuovi utenti ecc..</P>
 
-<P>It is highly recommended you leave this feature enabled in 
-your courses, as it helps give a sense of activity in the course.
-Knowing what everyone else is doing also helps to promote a 
-collaborative atmosphere in the class.
+<P>L'attivazione di quest'opzione ci permette di vedere rapidamente le attivit&agrave; del corso, inoltre
+permette di capire ci&ograve; che gli altri fanno al fine di promuovere una streta collaborazione
+tra gli alunni.</P>
 
-<P>You might want to disable this feature for extremely large or 
-heavily used courses, as it may slow down the display of 
-the course page.
+<P>L'opzione si pu&ograve; disabilitare nel caso in cui il corso sia di notevoli dimensioni,
+sia a causa degli accessi che per il volume dei contenuti; questo infatti potrebbe creare problemi
+di accesso al corso.</P>
