--- a/lang/it/help/coursestartdate.html
+++ b/lang/it/help/coursestartdate.html
@@ -1,19 +1,13 @@
-<P ALIGN=CENTER><B>Course Start Date</B></P>
+<P ALIGN=CENTER><B>Data di inizio del corso</B></P>
 
-<P>This is where you specify the starting time of the 
-   course (in your own timezone).
+<P>Qui bisogna inserire la data di inizio delle lezioni.
 
-<P>If you are using a 'weekly' course format, this will 
-   affect the display of the weeks.  The first week will
-   start on the date you set here.
+<P>Se si sta utilizzando il formato di corso 'settimanale', questa data corrisponde al primo 
+giorno di lezione attraverso e organizzera la suddivisione settimanale dell' stesso.</P>
  
-<P>This setting will not affect courses using the 
-   'social' or 'topics' formats.
+<P>Questo parametro sar&agrave; ignorato dai corsi organizzati secondo il formato 'sociale' e per 'contenuti'.</P>
 
-<P>However, one place this setting will be affect is 
-   the display of logs, which use this date as the earliest
-   possible date you can display.
+<P>La data influenzer&agrave; comunquea le informazini(?) sul corso in quanto inizierando in questa data.</P>
  
-<P>In general, if your course does have a real starting date
-   then it makes sense to set this date to that, no matter 
-   what course formats you are using.
+<P><u>Indipendentemente dal formato del corso, se il corso ha una data di inizio delle lezioni bisogna inserirla
+qui.</P>
