--- a/lang/it/help/enrolmentkey.html
+++ b/lang/it/help/enrolmentkey.html
@@ -1,23 +1,13 @@
-<P ALIGN=CENTER><B>Course Enrolment Key</B></P>
+<P ALIGN=CENTER><B>Chiave di accesso</B></P>
 
-<P>A course enrolment key is what keeps unwanted people 
-   out of your course.
+<P>Per restringere l'accesso al corso da parte degli utenti indesiderati
+ bisogna inserire una password di accesso.</P>
 
-<P>If you leave this blank, then anyone who has created 
-   a Moodle username on this site will be able to enrol
-   in your course simply by going in to it.
+<P>Lasciando in bianco questo campo, potr&agrave; accedere al corso qualsiasi utente registrato.</P>
 
-<P>If you put something here, then students who are trying 
-   to get in for the FIRST TIME ONLY will be asked to supply 
-   this word or phrase.
+<P>Se si inserisce una password gli alunni che desiderano iscriversi al corso 
+dovranno conoscerla per accedervi. La password sar&agrave; richiesta una volta soltanto.</P>
 
-<P>The idea is that you will supply the key to authorised 
-   people using another means like private email, snail mail,
-   on the phone or even verbally in a face to face class.
-
-<P>If this password "gets out" and you have unwanted people 
-   enrolling, you can unenrol them (see their user profile page)
-   and change this key.  Any legitimate students who have already 
-   enrolled will not be affected, but the unwanted people won't be 
-   able to get back in.
-
+<P>Il responsabile del corso sar&agrave; tenuto a dare la password agli utenti che possono iscriversi al corso.</POB>
+<P>La password potr&agrave; essere cambiata in ogni momento nonch&eacute; interdire l'accesso agli utenti 
+gi&agrave; iscritti.</P>
