--- a/lang/it/help/html.html
+++ b/lang/it/help/html.html
@@ -1,13 +1,12 @@
-<P ALIGN=CENTER><B>Help on writing html</B></P>
+<P ALIGN=CENTER><B>Scrivere in HTML</B></P>
 
-<P>When writing HTML in Moodle, you are free to use any HTML tags you like
-   to produce the effect you want.
+<P>Si &egrave; liberi di inserire qualsias tag HTML</P>
 
-<P>Your code will normally be printed on the page within a table cell, 
-   so:
+<P>Il codice sar&agrave; collocato 
+all'interno di una tabella tra i tag &lt;td> &lt;/td></P>
 
    <UL>
-   <LI>there is no need to use any &lt;HEAD> or &lt;BODY> tags
-   <LI>be careful about unmatched &lt;/TABLE> tags that may mess up the display.
+   <LI>Non &egrave; necessario utilizzare i tag &lt;HEAD> o &lt;BODY> 
+   <LI> Prestare attenzione durante l'inserimento di tabelle alla chiusura delle stesse con &lt;/TABLE>, per non distorcere l'impaginazione del corso.
    </UL>
 
