--- a/lang/it/help/langedit.html
+++ b/lang/it/help/langedit.html
@@ -1,12 +1,8 @@
-<P ALIGN=CENTER><B>Language Editing</B></P>
+<P ALIGN=CENTER><B>Modifica della lingua</B></P>
 
-<P>To edit languages on this page the files need to be writable 
-   by the web server process.
+<P>Per poter cambiare l'idioma in questa pagina bisogna avere il permesso
+di scrittura dei files sul server.</P>
 
-<P>Within some of the strings you will notice <B>$a</B> and <B>$a->something</B>.
-
-<P>These represent variables that will be replaced by names or other words from 
-   within Moodle.  
-
-<P>When there is only one variable, the $a form is used.  When there are two or 
-   more variables, then each one has a name.
+<P>In alcuni casi si troveranno
+delle scritte come <B>$a</B> oppure <B>$a->qualcosa</B>. Queste stringhe rappresentano delle variabili
+utilizzate dalla piattaforma. Non modificarle!</P>
