--- a/lang/it/help/courseformats.html
+++ b/lang/it/help/courseformats.html
@@ -1,24 +1,25 @@
-<P ALIGN=CENTER><B>Moodle course formats</B></P>
+<P ALIGN=CENTER><B>Formato dei corsi</B></P>
 
-<P><B>Weekly format</B></P>
+<P><B>Formato Settimanale</B></P>
 <UL>
-The course is organised week by week, with a clear start date and a finish date.
-Each week consists of activities.  Some of them, like journals, may have 
-"open windows" of, say, two weeks after which they become unavailable.
+Il corso viene organizzato settimana per settimana, definendo una data di inizio e
+una per la fina del corso.
+Ogni settminana comprende pi&ugrave; attivit&agrave;.
+Alcune di queste, come per esempio il "diario" pu&ograve; avere una validit&agrave;
+di un paio di settimane dopo di che risulter&agrave; inattivo.
 </UL>
 
-<P><B>Topics format</B></P>
+<P><B>Formato per Argomenti</B></P>
 <UL>
-Very similar to the weekly format, except that each "week" is called a topic.
-A "topic" is not restricted to any time limit.  You don't need to specify any
-dates.
+Questo formato &egrave; molto simile a quello &lquot;Settimanale&rquot;, con la differenza che la
+settmiana viene chiamata argomento.
+Un argomento non ha restrizione di tempo, infatti non sar&agrave; necessario specificare nessuna data.
 </UL>
 
-<P><B>Social format</B></P>
+<P><B>Fotmato Relazionale</B></P>
 <UL>
-This format is oriented around one main forum, the Social forum, which appears
-listed on the main page.  It is useful for situations that are more freeform.
-They may not even be courses.  For example, it could be used as a departmental
-notice board.
+Questo formato si organizza attorno ad un forum centrale che apparir&agrave; nella
+pagina principale del corso. Questo formato &egrave; ideale per situazioni d'insegnamento
+libere. Questo formato, in particolare, potrebbe non essere un vero e proprio corso bens&igrave; 
+venire usato come una bacheca per la struttura scolastica di riferimento.
 </UL>
-
