--- a/lang/it/help/coursefullname.html
+++ b/lang/it/help/coursefullname.html
@@ -1,4 +1,3 @@
-<P ALIGN=CENTER><B>Course Full name</B></P>
+<P ALIGN=CENTER><B>Nome completo del corso</B></P>
 
-<P>The full name of the course is displayed at the top of the screen and in the course listings.</P>
-
+<p>Il nome completo del corso viene visualizzato nella parte superiore dello schermo nella lista dei corsi.</p>
