--- a/lang/it/help/courseshortname.html
+++ b/lang/it/help/courseshortname.html
@@ -1,7 +1,7 @@
-<P ALIGN=CENTER><B>Course short name</B></P>
+<P ALIGN=CENTER><B>Nome abbreviato del corso<!--Nombre corto del curso--></B></P>
 
-<P>Many institutions have a shorthand way of referring to a course, such as 
-   BP102 or COMMS.  Even you don't already have such a name for your course, 
-   make one up here.  It will be used in several places where the long name 
-   isn't appropriate (such us in the subject line of email).</P>
-
+<P>Molte istituzioni assegnano a ogni corso, per questioni amministrative, delle sigle come
+BP102 o 4H-LIT. Se questo &egrave; il caso della vostro istituto, questa sigla pu&ograve; 
+essere inserita qui. La sigla sar&agrave; usata in tutte le situazioni dove l'inserimento del
+ nome completo del corso risultasse inadeguato; per esempio nell'oggetto delle e-mail.
+ </P>
