--- a/lang/it/help/guestaccess.html
+++ b/lang/it/help/guestaccess.html
@@ -1,21 +1,16 @@
-<P ALIGN=CENTER><B>Guest Access</B></P>
+<P ALIGN=CENTER><B>Accesso agli ospiti</B></P>
 
-<P>You have the choice of allowing "guests" into your course.
+<P>Si pu&ograve; permettere l'accesso ai corsi agli ospiti.</P>
 
-<P>People can log in as guests using the "Login as a guest" button
-   on the login screen.
+<P>Gli ospiti, potranno accedere al sistema tramite l'apposito pulsante "entra come ospite"
+nella pagina di registrazione utenti.</P>
 
-<P>Guests ALWAYS have "read-only" access - meaning they can't leave 
-   any posts or otherwise mess up the course for real students.
+<P>Gli ospiti non possiedono l'autorizzazione per partecipare attivamente ai corsi.</P>
 
-<P>This can be handy when you want to let a colleague in to 
-   look around at your work, or to let students see a course before 
-   they have decided to enrol.
+<P>Questa opzione pu&ograve; essere utile quando si vuole permettere l'accesso a coloro che sono 
+interessati ad ricevere informazioni generali sul corso.</P>
 
-<P>Note that you have a choice between two types of guest access:
-   with the enrolment key or without.  If you choose to allow 
-   guests who have the key, then the guest will need to provide 
-   the current enrolment key EVERY TIME they log in (unlike 
-   students who only need to do it once).  This lets you restrict 
-   your guests.  If you choose to allow guests without a key, then 
-   anyone can get straight into your course.
+<P>Esistono due tipi di accesso come ospite: con password o senza. Gli ospiti, 
+a differenza degli alunni, dovranno inserire la password di accesso ogni volta
+che accederanno al corso. Ci&ograve; permette un magiore controllo sugli accessi.
+Se il corso non possiede una password di accesso, chiunque ospite potr&agrave; visitare il corso.</P>
