new version german translation 2004-02-01

--- a/lang/de/help/richtext.html
+++ b/lang/de/help/richtext.html
@@ -1,4 +1,4 @@
-<P ALIGN=CENTER><B>About the Richtext HTML editor</B></P>
+<P ALIGN=CENTER><B>&Uuml;ber den Richtext-HTML-Editor</B></P>
 
 <P>Availability: <B>
 <?php  if (!$CFG->htmleditor) {
@@ -13,7 +13,7 @@
 ?>
 </B></P>
 
-<P>Der Richtext HTML Editor ist eine Schnittstelle zu Word. Er ist eingebettet
+<P>Der Richtext HTML Editor ist eine Schnittstelle zur Textverarbeitung. Er ist eingebettet
 in Ihre Webseite und erlaubt Ihnen, Text in einer intuitiven Weise zu editieren
 und normalen HTML-Code daraus zu machen.
 
@@ -64,7 +64,7 @@ sp&auml;ter konvertiert und die Smilieys werden dargestellt.)
         <table border="0" align="center" cellpadding="10">
           <tr>
             <td><img border="0" hspace="10" src="pix/s/smiley.gif" width="15" height="15"></td>
-            <td>lächeln</td>
+            <td>l&auml;cheln</td>
             <td NOWRAP><FONT FACE=Courier>:-)</td>
           </tr>
           <tr>
@@ -123,12 +123,12 @@ sp&auml;ter konvertiert und die Smilieys werden dargestellt.)
             </tr>
             <tr>
               <td><img alt border="0" hspace="10" src="pix/s/shy.gif" width="15" height="15"></td>
-              <td>schüchtern</td>
+              <td>sch&uuml;chtern</td>
               <td NOWRAP><FONT FACE=Courier>8-.</td>
             </tr>
           <tr>
             <td><img alt border="0" hspace="10" src="pix/s/blush.gif" width="15" height="15"></td>
-            <td>errötend</td>
+            <td>err&ouml;tend</td>
             <td NOWRAP><FONT FACE=Courier>:-I</td>
           </tr>
             <tr>
@@ -148,7 +148,7 @@ sp&auml;ter konvertiert und die Smilieys werden dargestellt.)
           </tr>
             <tr>
               <td><img alt border="0" hspace="10" src="pix/s/angry.gif" width="15" height="15"></td>
-              <td>wütend</td>
+              <td>w&uuml;tend</td>
               <td NOWRAP><FONT FACE=Courier>8-[</td>
             </tr>
             <tr>
@@ -158,17 +158,16 @@ sp&auml;ter konvertiert und die Smilieys werden dargestellt.)
             </tr>
             <tr>
               <td><img alt border="0" hspace="10" src="pix/s/sleepy.gif" width="15" height="15"></td>
-              <td>schläfrig</td>
+              <td>schl&auml;frig</td>
               <td NOWRAP><FONT FACE=Courier>|-.</td>
             </tr>
           <tr>
             <td><img alt border="0" hspace="10" src="pix/s/evil.gif" width="15" height="15"></td>
-            <td>übel</td>
+            <td>&uuml;bel</td>
             <td NOWRAP><FONT FACE=Courier>}-]</td>
           </tr>
         </table>
     </table>
 
 </UL>
-
 
