More help files added

--- a/lang/fr/help/workshop/finalgrades.html
+++ b/lang/fr/help/workshop/finalgrades.html
@@ -1,8 +1,8 @@
-<p align=center><b>Notes finales</b></p>
+<p align="center"><b>Notes finales</b></p>
 
 <p>Le tableau affich&eacute; sur cette page pr&eacute;sente les
 notes finales et leur r&eacute;partition dans la m&ecirc;me
-pr&eacute;sentation que pour les &eacute;tudiants. Si certaintes
+pr&eacute;sentation que pour les &eacute;tudiants. Si certaines
 valeurs manquent dans le tableau, il est possible de retourner
 &agrave; la phase pr&eacute;c&eacute;dente et de les ajouter. En
 fait, deux modifications peuvent &ecirc;tre apport&eacute;es aux
@@ -12,23 +12,22 @@ notes finales&nbsp;:</p>
 
 <li>Si la note d'un enseignant doit &ecirc;tre ajout&eacute;e,
 alors le travail peut &ecirc;tre &eacute;valu&eacute; en
-retournant &agrave; la gestion de l'atelier et en cliquant sur le
-lien &laquo;&nbsp;travaux d'&eacute;tudiants remis pour
-&eacute;valuation&nbsp;&raquo;. Toutes les travaux peuvent
-&ecirc;tre &eacute;valu&eacute;s ici. Une fois ceci fait, vous
-pouvez retourner &agrave; la phase 5 et recalculer les notes
-finales. De la m&ecirc;me fa&ccedil;on, tous les travaux qui
-n'ont pas &eacute;t&eacute; &eacute;valu&eacute;s peuvent
-l'&ecirc;tre &agrave; partir de la gestion de l'atelier.</li>
+retournant sur la page d'administration de l'atelier et en
+cliquant sur le lien &laquo;&nbsp;Travaux remis par les
+&eacute;tudiants&nbsp;&raquo;. Tous les travaux peuvent
+&ecirc;tre &eacute;valu&eacute;s ici. Vous pouvez alors retourner
+&agrave; la phase 5 et recalculer les notes finales. De la
+m&ecirc;me fa&ccedil;on, tous les travaux qui n'ont pas
+&eacute;t&eacute; &eacute;valu&eacute;s peuvent l'&ecirc;tre
+&agrave; partir de l'adminstration de l'atelier.</li>
 
 <li>L'enseignant peut d&eacute;cider de modifier la
 pond&eacute;ration des diff&eacute;rents &eacute;l&eacute;ments.
 Pour ce faire, il doit se rendre &agrave; la phase 5 de
 l'atelier. Il clique ensuite le lien &laquo;&nbsp;Calcul de la
-note finale&nbsp;&raquo; pour entrer la nouvelle
-pond&eacute;ration. Apr&egrave;s que les notes ont
-&eacute;t&eacute; calcul&eacute;es de nouveau, la phase 6 de
-l'atelier affiche les r&eacute;sultats aux &eacute;tudiants.
-</li>
+note finale&nbsp;&raquo; pour saisir les nouveaux coefficients.
+Apr&egrave;s que les notes ont &eacute;t&eacute;
+recalcul&eacute;es, la phase 6 de l'atelier affiche les
+r&eacute;sultats aux &eacute;tudiants. </li>
 
 </ol>
