More help files translated

--- a/lang/fr/help/workshop/graded.html
+++ b/lang/fr/help/workshop/graded.html
@@ -1,4 +1,4 @@
-<p align="center"><b>Un travail &eacute;valu&eacute; par les
+<p align="center"><b>Travail &eacute;valu&eacute; par les
 pairs</b></p>
 
 <p>Ceci affiche les notes et les commentaires qui ont
