--- a/lang/fr/help/workshop/gradingstrategy.html
+++ b/lang/fr/help/workshop/gradingstrategy.html
@@ -1,4 +1,4 @@
-<p align="center"><b>&Eacute;l&eacute;ments d'&eacute;valuation</b></p>
+<p align="center"><b>Strat&eacute;gie d'&eacute;valuation</b></p>
 
 <p>Pour faciliter l'&eacute;valuation, tout travail d'un atelier
 devrait comprendre un nombre raisonnable
