--- a/lang/nl/help/quiz/mods.html
+++ b/lang/nl/help/quiz/mods.html
@@ -2,7 +2,7 @@
 <UL>
 <P>Deze module laat de docent testen ontwerpen en vaststellen. De test kan multiple choice vragen, 
 waar/onwaar vragen en vragen met een kort antwoord bevatten. Deze vragen worden bewaard in een 
-gecategoriseerd database en ze kunnen hergebruikt worden binnen het vak of zelfs in andere vakken. 
+gecategoriseerde database en ze kunnen hergebruikt worden binnen het vak of zelfs in andere vakken. 
 Testen kunnen ingesteld worden zodat meerdere pogingen mogelijk zijn. Elke poging wordt automatisch 
 beoordeeld en de docent kan bepalen of het goede antwoord en of er feedback getoond wordt. In deze 
 module zitten beoordelingsfaciliteiten.</P>
