--- a/lang/fr/help/workshop/index.html
+++ b/lang/fr/help/workshop/index.html
@@ -14,12 +14,10 @@ href="help.php?module=workshop&file=anonymous.html">&Eacute;
 valuation anonyme</a></li>
 
 <li><a
-href="help.php?module=workshop&file=assessmentofexamples.html">&
-Eacute;valuation des exemples de l'enseignant</a></li>
+href="help.php?module=workshop&file=assessmentofexamples.html">&Eacute;valuation des exemples de l'enseignant</a></li>
 
 <li><a
-href="help.php?module=workshop&file=elements.html">&Eacute;l&
-eacute;ments d'&eacute;valuation</a></li>
+href="help.php?module=workshop&file=elements.html">&Eacute;l&eacute;ments d'&eacute;valuation</a></li>
 
 <li><a
 href="help.php?module=workshop&file=teachersgradings.html">
@@ -34,12 +32,10 @@ href="help.php?module=workshop&file=grading.html">&Eacute;
 valuation des travaux remis</a></li>
 
 <li><a
-href="help.php?module=workshop&file=gradingstrategy.html">Strat&
-eacute;gie d'&eacute;valuation</a></li>
+href="help.php?module=workshop&file=gradingstrategy.html">Strat&eacute;gie d'&eacute;valuation</a></li>
 
 <li><a
-href="help.php?module=workshop&file=gradingsubmissions.html">&
-Eacute;valuation des travaux d'&eacute;tudiants</a></li>
+href="help.php?module=workshop&file=gradingsubmissions.html">&Eacute;valuation des travaux d'&eacute;tudiants</a></li>
 
 <li><a
 href="help.php?module=workshop&file=gradingassessments.html">
@@ -83,8 +79,7 @@ href="help.php?module=workshop&file=resubmit.html">Remettre un
 travail &agrave; plusieurs reprises</a></li>
 
 <li><a
-href="help.php?module=workshop&file=selfassessment.html">Auto-&
-eacute;valuation</a></li>
+href="help.php?module=workshop&file=selfassessment.html">Auto-&eacute;valuation</a></li>
 
 <li><a href="help.php?module=workshop&file=specimen.html">Exemple
 de formulaire d'&eacute;valuation</a></li>
