More typos corrected

--- a/lang/fr/help/workshop/index.html
+++ b/lang/fr/help/workshop/index.html
@@ -10,32 +10,36 @@ href="help.php?module=workshop&file=addingacomment.html">Ajouter
 un commentaire</a></li>
 
 <li><a
-href="help.php?module=workshop&file=anonymous.html">&Eacute;
-valuation anonyme</a></li>
+href="help.php?module=workshop&file=anonymous.html">&Eacute;valuation
+anonyme</a></li>
 
 <li><a
-href="help.php?module=workshop&file=assessmentofexamples.html">&Eacute;valuation des exemples de l'enseignant</a></li>
+href="help.php?module=workshop&file=assessmentofexamples.html">&Eacute;valuation
+des exemples de l'enseignant</a></li>
 
 <li><a
-href="help.php?module=workshop&file=elements.html">&Eacute;l&eacute;ments d'&eacute;valuation</a></li>
+href="help.php?module=workshop&file=elements.html">&Eacute;l&eacute;ments
+d'&eacute;valuation</a></li>
 
 <li><a
-href="help.php?module=workshop&file=teachersgradings.html">
-Affichage des notes de l'enseignant</a></li>
+href="help.php?module=workshop&file=teachersgradings.html">Affichage
+des notes de l'enseignant</a></li>
 
 <li><a
-href="help.php?module=workshop&file=editingacomment.html">
-Modification d'un commentaire</a></li>
+href="help.php?module=workshop&file=editingacomment.html">Modification
+d'un commentaire</a></li>
 
 <li><a
-href="help.php?module=workshop&file=grading.html">&Eacute;
-valuation des travaux remis</a></li>
+href="help.php?module=workshop&file=grading.html">&Eacute;valuation
+des travaux remis</a></li>
 
 <li><a
-href="help.php?module=workshop&file=gradingstrategy.html">Strat&eacute;gie d'&eacute;valuation</a></li>
+href="help.php?module=workshop&file=gradingstrategy.html">Strat&eacute;gie
+d'&eacute;valuation</a></li>
 
 <li><a
-href="help.php?module=workshop&file=gradingsubmissions.html">&Eacute;valuation des travaux d'&eacute;tudiants</a></li>
+href="help.php?module=workshop&file=gradingsubmissions.html">&Eacute;valuation
+des travaux d'&eacute;tudiants</a></li>
 
 <li><a
 href="help.php?module=workshop&file=gradingassessments.html">
@@ -53,22 +57,19 @@ href="help.php?module=workshop&file=managing.html">Administration
 d'un atelier</a></li>
 
 <li><a
-href="help.php?module=workshop&file=
-nassessmentsofstudentsubmissions.html">Nombre
+href="help.php?module=workshop&file=nassessmentsofstudentsubmissions.html">Nombre
 d'&eacute;valuations de travaux d'&eacute;tudiants</a></li>
 
 <li><a
-href="help.php?module=workshop&file=
-nassessmentsofteachersexamples.html">Nombre d'&eacute;valuations
-d'exemples de l'enseignant</a></li>
+href="help.php?module=workshop&file=nassessmentsofteachersexamples.html">Nombre
+d'&eacute;valuations d'exemples de l'enseignant</a></li>
 
 <li><a href="help.php?module=workshop&file=nelements.html">Nombre
-de commentaires, de crit&egrave;res ou
-d'&eacute;nonc&eacute;s</a></li>
+de commentaires, de crit&egrave;res ou d'&eacute;nonc&eacute;s</a></li>
 
 <li><a
-href="help.php?module=workshop&file=numberofassessors.html">
-Nombre d'&eacute;tudiants-correcteurs</a></li>
+href="help.php?module=workshop&file=numberofassessors.html">Nombre
+d'&eacute;tudiants-correcteurs</a></li>
 
 <li><a
 href="help.php?module=workshop&file=assignmenttype.html">Types
@@ -89,25 +90,23 @@ href="help.php?module=workshop&file=submissionofexamples.html">
 Remettre des exemples de travaux</a></li>
 
 <li><a
-href="help.php?module=workshop&file=breakdownoffinalgrade.html">
-Composition de la note finale</a></li>
+href="help.php?module=workshop&file=breakdownoffinalgrade.html">Composition
+de la note finale</a></li>
 
 <li><a
-href="help.php?module=workshop&file=calculatingfinalgrade.html">
-Calcul de la note finale</a></li>
+href="help.php?module=workshop&file=calculatingfinalgrade.html">Calcul
+de la note finale</a></li>
 
 <li><a
 href="help.php?module=workshop&file=finalgrades.html">Notes
 finales</a></li>
 
 <li><a
-href="help.php?module=workshop&file=ungradedassessments_student.
-html">&Eacute;valuations sans notes (travaux
-d'&eacute;tudiants)</a></li>
+href="help.php?module=workshop&file=ungradedassessments_student.html">&Eacute;valuations
+sans notes (travaux d'&eacute;tudiants)</a></li>
 
 <li><a
-href="help.php?module=workshop&file=ungradedassessments_teacher.
-html">&Eacute;valuations sans notes (exemples de
-l'enseignant)</a></li>
+href="help.php?module=workshop&file=ungradedassessments_teacher.html">&Eacute;valuations
+sans notes (exemples de l'enseignant)</a></li>
 
 </ul>
