Some small corrections

--- a/lang/fr/help/workshop/gradingassessments.html
+++ b/lang/fr/help/workshop/gradingassessments.html
@@ -25,7 +25,7 @@ critique sur les travaux.</li>
 </ul>
 
 <p>L'&eacute;valuation de l'enseignant est affich&eacute;e &agrave;
-l'&eacute;tudiant-correcteur lorsqu'elle est disponible. Cette
+l'&eacute;tudiant lorsqu'elle est disponible. Cette
 &eacute;valuation sert alors de r&eacute;f&eacute;rence pour
 l'&eacute;tudiant.</p>
 
