--- a/lang/fr/help/workshop/includeself.html
+++ b/lang/fr/help/workshop/includeself.html
@@ -4,7 +4,7 @@
 &agrave; chaque &eacute;tudiant son propre travail en plus d'un
 ou plusieurs travaux de ses pairs. Par exemple, si le nombre de
 travaux &agrave; corriger est fix&eacute; &agrave; trois, chaque
-&eacute;tudiant-correcteur &eacute;valuera quatre travaux&nbsp;:
+&eacute;tudiant &eacute;valuera quatre travaux&nbsp;:
 le sien et trois travaux provenant de trois autres
 &eacute;tudiants.</p>
 
