--- a/lang/fr/help/workshop/index.html
+++ b/lang/fr/help/workshop/index.html
@@ -69,7 +69,7 @@ de commentaires, de crit&egrave;res ou d'&eacute;nonc&eacute;s</a></li>
 
 <li><a
 href="help.php?module=workshop&file=numberofassessors.html">Nombre
-d'&eacute;tudiants-correcteurs</a></li>
+d'&eacute;valuations par les pairs</a></li>
 
 <li><a
 href="help.php?module=workshop&file=assignmenttype.html">Types
