--- a/lang/fr/help/workshop/managing.html
+++ b/lang/fr/help/workshop/managing.html
@@ -37,7 +37,7 @@ sp&eacute;cimens d'&eacute;valuations pour comparaison avec les
 de travaux. Dans certains cas, cela pourrait m&ecirc;me se
 r&eacute;v&eacute;ler inappropri&eacute;.</p> </li>
 
-<li> <p><b>Permettre la remise des travaux (&Eacute;tudiant)</b>
+<li> <p><b>Permettre la remise des travaux</b>
 Le travail peut maintenant d&eacute;buter pour les
 &eacute;tudiants. Si l'enseignant a fourni des exemples de
 travaux, les &eacute;tudiants devront en &eacute;valuer un
@@ -53,8 +53,8 @@ suffisant de travaux pour en assurer une meilleure distribution
 aupr&egrave;s des &eacute;tudiants. Les travaux seront
 distribu&eacute;s pour &eacute;valuation dans les deux phases
 suivantes. Si le travail passe sans d&eacute;lai dans la phase
-&laquo;&nbsp;Permettre la remise des travaux et
-&eacute;valuations (&Eacute;tudiant)&nbsp;&raquo; (cela est
+&laquo;&nbsp;Permettre la remise des travaux et des
+&eacute;valuations&nbsp;&raquo; (cela est
 possible), les &eacute;tudiants qui remettent leurs travaux en
 premier n'auront que ces premiers travaux &agrave;
 &eacute;valuer, tandis que les derniers &eacute;tudiants auront
@@ -70,8 +70,8 @@ travail. Les &eacute;valuations de l'enseignant faites
 apr&egrave;s le calcul des notes finales ne seront
 &eacute;videmment pas consid&eacute;r&eacute;es.</p> </li>
 
-<li> <p><b>Permettre la remise des travaux et &eacute;valuations
-(&Eacute;tudiant)</b> Si l'enseignant a inclus
+<li> <p><b>Permettre la remise des travaux et des &eacute;valuations</b>
+Si l'enseignant a inclus
 l'&eacute;valuation par les pairs dans l'atelier, les
 &eacute;tudiants qui ont remis leur travail ont alors
 acc&egrave;s aux travaux de leurs pairs pour qu'ils puissent en
