--- a/lang/fr/help/workshop/includeteachersgrade.html
+++ b/lang/fr/help/workshop/includeteachersgrade.html
@@ -4,9 +4,9 @@
 &eacute;valuations du professeur comptent double dans le calcul
 de la note&nbsp;: premi&egrave;rement comme &eacute;valuation
 faite par l'enseignant et deuxi&egrave;mement comme
-&eacute;valuation faite par un &eacute;tudiant-correcteur (ses
+&eacute;valuation faite par un &eacute;tudiant (ses
 &eacute;valuations &eacute;tant aussi ajout&eacute;es aux
-&eacute;valuations des &eacute;tudiants-correcteurs).
+&eacute;valuations des &eacute;tudiants).
 L'enseignant peut d&eacute;cider d'agir ainsi parce
 que&nbsp;:</p>
 
