--- a/lang/fr/help/workshop/numberofassessors.html
+++ b/lang/fr/help/workshop/numberofassessors.html
@@ -1,5 +1,4 @@
-<p align="center"><b>Nombre de travaux corrig&eacute;s par chaque
-&eacute;tudiant</b></p>
+<p align="center"><b>Nombre d'&eacute;valuations par les pairs</b></p>
 
 <p>Dans un atelier, l'enseignant peut demander &agrave; chaque
 &eacute;tudiant d'&eacute;valuer un certain nombre de travaux
