More files translated

--- a/lang/fr/help/workshop/index.html
+++ b/lang/fr/help/workshop/index.html
@@ -87,7 +87,7 @@ de formulaire d'&eacute;valuation</a></li>
 
 <li><a
 href="help.php?module=workshop&file=submissionofexamples.html">
-Remettre des exemples de travaux</a></li>
+Remettre un exemple de travail</a></li>
 
 <li><a
 href="help.php?module=workshop&file=breakdownoffinalgrade.html">Composition
