--- a/lang/fr/help/quiz/formatgift.html
+++ b/lang/fr/help/quiz/formatgift.html
@@ -56,7 +56,7 @@
 
 <h4>Appariement</h4>
 
-<p>Les paires correspondantes doivent commencer par un signe &eacute;gal (=) et sont s&eacute;par&eacute;es par le symbole &laquo;&nbsp;-&gt;&nbsp;&raquo; (sans les guillemets). Il doit y avoir au moins trois paires.</p>
+<p>Les paires correspondantes doivent commencer par un signe &eacute;gal (=) et sont s&eacute;par&eacute;es par le symbole &laquo;&nbsp;->&nbsp;&raquo; (sans les guillemets). Il doit y avoir au moins trois paires.</p>
 
 <pre>
      Matching Question. {
@@ -200,9 +200,9 @@ Les questions d'appariement ne permettent pas les feedbacks, ni les coefficients
 
 <p>D'autres options sont disponibles en &eacute;ditant le filtre d'importation <b>gift/format.php</b>.</p>
 
-<p>Les r&eacute;ponses courtes peuvent &ecirc;tre rendues sensibles &agrave; la casse des caract&egrave;res en changeant &quot;0&quot; &agrave; &quot;1&quot; dans la ligne suivante&nbsp;:<br />
+<p>Les r&eacute;ponses courtes peuvent &ecirc;tre rendues sensibles &agrave; la casse des caract&egrave;res en rempla&ccedil;ant &laquo;&nbsp;0&nbsp;&raquo; par &laquo;&nbsp;1&nbsp;&raquo; dans la ligne suivante&nbsp;:</p>
 
-<tt>$question-&gt;usecase = 0;  // Ignore case</tt></p>
+<pre>     $question->usecase = 0;  // Ignore case</pre>
 
 <h3>Des erreurs&nbsp;?</h3>
 
