--- a/lang/pt_br/help/forum/index.html
+++ b/lang/pt_br/help/forum/index.html
@@ -3,5 +3,6 @@
   <li><a href="help.php?module=forum&file=allowdiscussions.html">Autorizar o Envio de Mensagens ao F&oacute;rum</a>
   <li><a href="help.php?module=forum&file=attachment.html">Anexos</a>
   <li><a href="help.php?module=forum&file=forumtype.html">Tipos de F&oacute;rum</a>
+  <li><a href="help.php?module=forum&file=ratings.html">Classificação das Postagens</a>
   <li><a href="help.php?module=forum&file=subscription.html">Assinantes do F&oacute;rum</a>
 </ul>
