--- a/lang/pt_br/help/surveys.html
+++ b/lang/pt_br/help/surveys.html
@@ -1,79 +1,59 @@
-<P ALIGN=CENTER><B>Available surveys</B></P>
+<P ALIGN=CENTER><B>Tipos de Avaliação de Curso Disponíveis</B></P>
 
-<P>Currently, Moodle only offers specific types of surveys (future versions 
-will enable you to create your own).</P>
+<P>Atualmente a plataforma tem 2 tipos de questionários de avaliação de curso específicos, desenvolvidos para a avaliação de percursos de aprendizagem online baseados em teorias construtivistas.</P>
 
-<P>The available surveys have been chosen as being particularly useful for 
-evaluating online learning environments that use a constructivist pedagogy. 
-They are useful to identify certain trends that may be happening among
-your participants.
-
-(To see a paper where these are used in a detailed analysis, see:  
-<A TARGET=paper HREF="http://dougiamas.com/writing/herdsa2002">http://dougiamas.com/writing/herdsa2002</A>)</P>
+<P>Com base nos resultados destes questionários, pode-se identificar os fenômenos sociais e tendências individuais que caracterizam os processos de aprendizagem ao longo do curso, com o objetivo de avaliar a adequação das práticas adotadas e otimizar estes processos.
+Uma análise mais completa sobre o uso destes questionários (em inglês) é disponível no seguinte endereço: <A TARGET=paper HREF="http://dougiamas.com/writing/herdsa2002">http://dougiamas.com/writing/herdsa2002</A>)</P>
 
 <HR>
 <P><B>COLLES - Constructivist On-Line Learning Environment Survey</B></P>
 <UL>
-  <p>The COLLES comprises an economical 24 statements grouped into six scales, 
-    each of which helps us address a key question about the quality of the on-line 
-    learning environment: </p>
+  <p>O questionário COLLES  é formado por 24 declarações distribuidas em 6 grupos, cada uma das quais relativa a um ponto crucial de avaliação da qualidade do processo de aprendizagem no ambiente virtual:</p>
 
 <table BORDER="0" CELLSPACING="10" CELLPADDING="10">
   <tr> 
-    <td valign=top>Relevance</td>
-    <td>How relevant is on-line learning to students' professional practices? 
+    <td valign=top>Relevância</td>
+    <td>Quão relevante é o processo de aprendizagem para a vida profissional do participante? 
     </td>
   </tr>
   <tr> 
-    <td valign=top>Reflection </td>
+    <td valign=top>Reflexão Crítica</td>
 
-    <td>Does on-line learning stimulate students' critical reflective thinking? 
+    <td>As atividades on-line estimulam os processos de reflexão crítica dos alunos? 
     </td>
   </tr>
   <tr> 
-    <td valign=top>Interactivity </td>
-    <td>To what extent do students engage on-line in rich educative dialogue? 
+    <td valign=top>Interação</td>
+    <td>Até que ponto os diálogos on-line são ricos, considerando um contexto educativo?
     </td>
   </tr>
   <tr> 
-    <td valign=top>Tutor Support</td>
+    <td valign=top>Apoio dos Tutores</td>
 
-    <td>How well do tutors enable students to participate in on-line learning? 
+    <td>Em que medida as atividades dos tutores favorecem o desenvolvimento de habilidades de participação no curso on-line?
     </td>
   </tr>
   <tr> 
-    <td valign=top>Peer Support </td>
-    <td>Is sensitive and encouraging support provided on-line by fellow students? 
+    <td valign=top>Apoio dos Colegas</td>
+    <td>Os colegas se apoiam e se encorajam mutuamente em modo sensível? 
     </td>
   </tr>
   <tr> 
-    <td valign=top>Interpretation </td>
+    <td valign=top>Compreensão</td>
 
-    <td>Do students and tutors make good sense of each other's on-line communications?</td>
+    <td>Os participantes e os tutores compreendem bem as comunicações recíprocas?</td>
   </tr>
 </table>
 
-  <p>Underpinning the dynamic view of learning is a new theory of knowing: social 
-    constructivism, which portrays the learner as an active conceptualiser within 
-    a socially interactive learning environment. Social constructivism is an epistemology, 
-    or way of knowing, in which learners collaborate reflectively to co-construct 
-    new understandings, especially in the context of mutual inquiry grounded in 
-    their personal experience. </p>
+  <p>O construtivismo social tem como fundameto tórico a visão da aprendizagem como processo dinâmico. A aprendizagem é vista como uma atividade de elaboração conceitual em um ambiente carcterizado pela interação social. O construtivismo social é uma epistemologia, ou
+  modo de saber, em que o novo conhecimento é construido através da colaboração recíproca, especialmente em um contexto de intercambio de experiências pessoais.</p>
 
-  <p>Central to this collaboration is the development of students' communicative 
-    competence, that is, the ability to engage in open and critical discourse 
-    with both the teacher and peers. This discourse is characterised by an empathic 
-    orientation to constructing reciprocal understanding, and a critical attitude 
-    towards examining underlying assumptions. </p>
+  <p>Um elemento central para a colaboração recíproca, é o desenvolvimento de competências de comunicação, ou seja, a habilidade de participar nas discussões com colegas e tutores em modo construtivo. As discussões devem ser orientadas à compreensão mutua e a atividades de reflexão crítica.</p>
 
-  <p>The COLLES has been designed to enable you
-    to monitor the extent to which you are able to exploit the interactive capacity 
-    of the World Wide Web for engaging students in dynamic learning practices. </p>
+  <p>O questionário COLLES foi projetado para monitorar as práticas de aprendizagem on-line e verificar a medida em que estas práticas se configuram como processos dinâmicos favorecidos pela interação.
+</p>
 
-<P>
-(This information has been adapted from the COLLES page.  You can find out more about 
-COLLES and the authors of it at: 
-<A TARGET=paper HREF="http://surveylearning.com/colles/">http://surveylearning.com/colles/</A>)</P>
+<P>Estas informações foram adaptadas dos textos publicados pelos autores do questionário COLLES no seguinte endereço: <A TARGET=paper HREF="http://surveylearning.com/colles/">http://surveylearning.com/colles/</A>)</P>
 </UL>
 
 
@@ -81,13 +61,13 @@ COLLES and the authors of it at:
 <P><B>ATTLS - Attitudes to Thinking and Learning Survey</B></P>
 <UL>
 
-<P>The theory of 'ways of knowing', originally from the field of gender research (Belenky et al., 1986) provides us with a survey tool to examine the quality of discourse within a collaborative environment. 
+<P>A teoria dos 'modos de saber', originalmente desenvolvida no campo da pesquisa sobre as diferenças entre os sexos (Belenky et al., 1986), compreende um instrumento de pesquisa para examinar a qualidade do discurso em um ambiente colaborativo. 
 
-<P>The Attitudes Towards Thinking and Learning Survey (ATTLS) is an instrument developed by Galotti et al. (1999) to measure the extent to which a person is a 'connected knower' (CK) or a 'separate knower' (SK). 
+<P>O questionário Attitudes Towards Thinking and Learning Survey (ATTLS) é um instrumento desenvolvido por Galotti et al. (1999) para medir a proporção em que uma pessoa tem um saber 'conectado' (CK) ou um saber 'destacado' (SK).  
 
-<P>People with higher CK scores tend to find learning more enjoyable, and are often more cooperative, congenial and more willing to build on the ideas of others, while those with higher SK scores tend to take a more critical and argumentative stance to learning. 
+<P>Pessoas com valores CK maiores tendem a ver os processos de aprendizagem como experiências prazeirosas, cooperam com maior frequência, procuram ser agradáveis e demonstram interesse em construir a partir da idéia dos outros, enquanto as pessoas com valores SK mais altos tendem a ter uma posição mais crítica e criar polêmicas. 
 
-<P>Studies have shown that these two learning styles are independent of each other (Galotti et al., 1999; Galotti et al., 2001). Additionally, they are only a reflection of learning attitudes, not learning capacities or intellectual power. 
+<P>Os estudos demonstraram que estes dois estilos de aprendizagem são independentes (Galotti et al., 1999; Galotti et al., 2001). Além disso, são apenas reflexos das atitudes em relação à aprendizagem, e não das capacidades de apender ou do poder intelectual. 
 
 <P><I>Belenky, M. F., Clinchy, B. M., Goldberger, N. R., & Tarule, J. M. (1986). Women's Ways of Knowing: The Development of Self, Voice, and Mind. New York: Basic Books, Inc. </I></P>
 
