--- a/admin/config.html
+++ b/admin/config.html
@@ -44,6 +44,33 @@
     </td>
 </tr>
 <tr valign=top>
+	<td align=right><p>timezone:</td>
+    <td><?php
+       if (abs($config->timezone) > 13) {
+           $config->timezone = 99;
+       }
+       $timenow = time();
+
+       for ($tz = -26; $tz <= 26; $tz++) {
+           $zone = (float)$tz/2.0;
+           $usertime = $timenow + ($tz * 1800);
+           if ($tz == 0) {
+               $timezones["$zone"] = gmstrftime("%a, %I:%M %p", $usertime)." (GMT)";
+           } else if ($tz < 0) {
+               $timezones["$zone"] = gmstrftime("%a, %I:%M %p", $usertime)." (GMT$zone)";
+           } else {
+               $timezones["$zone"] = gmstrftime("%a, %I:%M %p", $usertime)." (GMT+$zone)";
+           }
+       }
+
+       choose_from_menu ($timezones, "timezone", $config->timezone, get_string("serverlocaltime"), "", "99");
+    ?>
+    </td>
+    <td>
+    <?php print_string("configtimezone") ?>
+    </td>
+</tr>
+<tr valign=top>
 	<td align=right><p>country:</td>
 	<td><?php choose_from_menu (get_list_of_countries(), "country", $config->country, get_string("selectacountry"), "") ?>
 	</td>
