--- a/lang/fr/help/glossary/aliases.html
+++ b/lang/fr/help/glossary/aliases.html
@@ -1,4 +1,4 @@
-<p align="center"><b>Mots Clefs</b></p>
+<p align="center"><b>Mots clefs</b></p>
 
 <p>Chaque entr&eacute;e du glossaire peut &ecirc;tre associ&eacute;e
 &agrave; une liste de mots clefs ou alias.</p>
