--- a/lang/fr/help/glossary/defaultapproval.html
+++ b/lang/fr/help/glossary/defaultapproval.html
@@ -1,5 +1,5 @@
-<p align="center"><b>Approbation des entr&eacute;es par
-d&eacute;faut</b></p>
+<p align="center"><b>Approbation par d&eacute;faut des
+entr&eacute;es</b></p>
 
 <p>Ce r&eacute;glage permet &agrave; l'enseignant de d&eacute;finir ce
 qui se passe lorsque de nouvelles entr&eacute;es sont propos&eacute;es
