All help files for Glossary module translated

--- a/lang/fr/help/glossary/index.html
+++ b/lang/fr/help/glossary/index.html
@@ -8,7 +8,7 @@ Fichiers d'aide au sujet des glossaires&nbsp;:
   <li><a href="help.php?module=glossary&file=mainglossary.html">D&eacute;finir le glossaire principal d'un cours</a>
   <li><a href="help.php?module=glossary&file=defaultapproval.html">Approbation par d&eacute;faut des entr&eacute;es</a>
   <li><a href="help.php?module=glossary&file=allowduplicatedentries.html">Permettre les doublons</a>
-  <li><a href="help.php?module=glossary&file=studentcanpost.html">Les &eacute;tudiants peuvent ajouter des entr&eacute;es</a>
+  <li><a href="help.php?module=glossary&file=studentcanpost.html">Permettre aux &eacute;tudiants d'ajouter des entr&eacute;es</a>
   <li><a href="help.php?module=glossary&file=allowcomments.html">Permettre les commentaires</a>
   <li><a href="help.php?module=glossary&file=displayformat.html">Format d'affichage</a>
   <li><a href="help.php?module=glossary&file=entbypage.html">D&eacute;finir le nombre d'entr&eacute;es par page</a>
